app/assets/stylesheets/_empty.scss
.main-view-empty {
  border-radius: 4px;
  box-sizing: border-box;
  color: white;
  font-size: .75em;
  left: 50%;
  line-height: 1.5;
  margin-left: -40%;
  margin-top: 180px;
  padding: 1em;
  position: absolute;
  text-align: center;
  width: 80%;
  .content {
    position: relative;
  }
  @include respond-to(md) {
    margin-left: -20%;
    width: 40%;
  }
  &, .top-slope, .bottom-slope {
    background: $mine-shaft;
  }
}

